--- a/templates/weixin/nearby_list.html
+++ b/templates/weixin/nearby_list.html
@@ -19,7 +19,7 @@
     <script>
         function withdraw()
         {
-            showTip('提现成功', 'success');
+            alert('提现成功', 'success');
         }
     </script>
 {% endblock %}
