--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -87,7 +87,19 @@
                         scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
                         success: function (res) {
                             var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-                            location.href = '/weixin/output_tip/';
+                            // call socket server to lend
+                            // step1: push openid, 机柜码
+                            //
+                            alert(result);
+                            var cabinet_code = result;
+                            $.ajax({
+                                type:"post",
+                                url:"/weixin/output_tip/",//自己填写请求地址
+                                data:{cabinet_code:cabinet_code},
+                                success:function(result){
+
+                                  }
+                            });
                         }
                     });
                 }
