add weixin function

--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -91,7 +91,7 @@
                             // step1: push openid, 机柜码
                             //
                             alert(result);
-                            var cabinet_code = result;
+                            var cabinet_code = '12-1213-21';
                             $.ajax({
                                 type:"post",
                                 url:"/weixin/output_tip/",//自己填写请求地址
