--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -94,7 +94,7 @@
                             var cabinet_code = '12-1213-21';
                             $.ajax({
                                 type:"post",
-                                url:"/weixin/get_capacity/",//自己填写请求地址
+                                url:"/weixin/get_opacity/",//自己填写请求地址
                                 data:{cabinet_code:cabinet_code},
                                 success:function(result){
 
