--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -97,7 +97,7 @@
                                 url:"/weixin/get_opacity/",//自己填写请求地址
                                 data:{cabinet_code:cabinet_code},
                                 success:function(result){
-
+                                    location.href = '/weixin/output_tip/' + result + '/'
                                 }
                             });
                         }
