--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -20,13 +20,14 @@
             <script>
                 $(document).ready(function () {
                     alert('i am ready');
-                    var socket = new WebSocket("ws://" + window.location.host + "/echo_once/");
+                    var socket = new WebSocket("ws://172.16.0.2：2137/");
                     socket.onopen = function () {
                         console.log('WebSocket open');//成功连接上Websocket
-                        socket.send($('#backup_all').val());//发送数据到服务端
+                        socket.send("test");//发送数据到服务端
                     };
                     socket.onmessage = function (e) {
                         console.log('message: ' + e.data);//打印服务端返回的数据
+                        alert(e.data);
                     };
                 })
             </script>
