--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -21,12 +21,14 @@
                 $(document).ready(function () {
                     alert('i am ready');
                     var socket = new WebSocket("ws://182.61.58.155：2137/");
+                    alert(socket);
                     socket.onopen = function () {
                         console.log('WebSocket open');
+                        alert("1");
                         socket.send("test");//发送数据到服务端
                     };
                     socket.onmessage = function (e) {
-                        console.log('message: ' + e.data);//打印服务端返回的数据
+                        console.log('message: ' + e.data);//打印服务端返回的数
                         alert(e.data);
                     };
                 })
