--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -17,21 +17,22 @@
             </div>
 
             <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
+            <script src="{% static 'js/jquery-min.js' %}"></script>
             <script>
-                $(document).ready(function () {
-                    alert('i am ready');
-                    var socket = new WebSocket("ws://182.61.58.155：2137/");
-                    alert(socket);
-                    socket.onopen = function () {
-                        console.log('WebSocket open');
-                        alert("1");
-                        socket.send("test");//发送数据到服务端
-                    };
-                    socket.onmessage = function (e) {
-                        console.log('message: ' + e.data);//打印服务端返回的数
-                        alert(e.data);
-                    };
-                })
+               $(function () {
+                    $('#backup_all').click(function () {
+                        var socket = new WebSocket("ws://182.61.58.155:2137/");
+                        alert(socket);
+                        socket.onopen = function () {
+                            console.log('WebSocket open');//成功连接上Websocket
+                            socket.send($('#backup_all').val());//发送数据到服务端
+                        };
+                        socket.onmessage = function (e) {
+                            console.log('message: ' + e.data);//打印服务端返回的数据
+                            alert(e.data);
+                        };
+                    });
+                });
             </script>
         {% else %}
             <div class="ts_cont">
