--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -14,8 +14,9 @@
                <div class="sm_cont">
                 请注意机柜屏幕信息<br>自拍杆将从<span class="col_z">闪亮指示灯位置</span>吐出<br>请及时取走掏空
             </div>
-            </div>
 
+            </div>
+            <input type="button" id="backup_all" value="back_all">
             <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
             <script src="{% static 'js/jquery-min.js' %}"></script>
             <script>
@@ -34,6 +35,7 @@
                     });
                 });
             </script>
+
         {% else %}
             <div class="ts_cont">
                <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="自拍杆被掏空">
