--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -26,7 +26,7 @@
                         alert(socket);
                         socket.onopen = function () {
                             console.log('WebSocket open');//成功连接上Websocket
-                            socket.send($('#backup_all').val());//发送数据到服务端
+                            socket.send('test');//发送数据到服务端
                         };
                         socket.onmessage = function (e) {
                             console.log('message: ' + e.data);//打印服务端返回的数据
