--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -17,30 +17,30 @@
 
                 <div class="zjjl_con">
                    <div class="zjjl_h">
-                       <div class="zjjl_dd">订单号：{{ history.id }}</div>
-                       <div class="zjjl_zt">{{ history.status }}</div>
+                       <div class="zjjl_dd">订单号：{{ history.0 }}</div>
+                       <div class="zjjl_zt">{{ history.5 }}</div>
                    </div>
                    <div class="zjjl_h">
                        <div class="zjjl_tf">用时：<span class="col_z">
                            {% if history.return_time %}
-                                {{ history.time | get_time_long:history.return_time }}
+                                {{ history.2 | get_time_long:history.3 }}
                            {% else %}
-                                {{ history.start_time }}
+                                {{ history.2 }}
                            {% endif %}</span>
                        </div>
-                       <div class="zjjl_tf">费用：<span class="col_z">{{ history.money }}元</span></div>
+                       <div class="zjjl_tf">费用：<span class="col_z">{{ history.4 }}元</span></div>
                    </div>
                    <div class="zjjl_h zjjl_h_hr">
                            <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"></div>
                            还：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
-                            <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
-                           租：{{ history.start_time }}<br>{{ history.site }}</div>
+                            <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="归还"></div>
+                           租：{{ history.2 }}<br>{{ history.site }}</div>
                    </div>
                  </div>
 
             {% endfor %}
         {% else %}
-            <div class="wk_ts">您竟然还没体验自拍神器，还等什么～<br><a href="">借自拍杆</a></div>
+            <div class="wk_ts">您竟然还没体验自拍神器，还等什么～<br><a href="/weixin/lend/">借自拍杆</a></div>
         {% endif %}
 
     </div>
