--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -18,7 +18,13 @@
                 <div class="zjjl_con">
                    <div class="zjjl_h">
                        <div class="zjjl_dd">订单号：{{ history.0 }}</div>
-                       <div class="zjjl_zt">{{ history.5 }}</div>
+                       <div class="zjjl_zt">
+                           {% ifequal history.5 0 %}
+                               <span>借出</span>
+                            {% elifequal %}
+                               <span>归还</span>
+                           {% endifequal %}
+                       </div>
                    </div>
                    <div class="zjjl_h">
                        <div class="zjjl_tf">用时：<span class="col_z">
