--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -21,7 +21,7 @@
                        <div class="zjjl_zt">
                            {% ifequal history.5 0 %}
                                <span>借出</span>
-                            {% elifequal %}
+                            {% elifequal history.5 1 %}
                                <span>归还</span>
                            {% endifequal %}
                        </div>
