--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -31,21 +31,22 @@
                            {% if history.3 %}
                                 {{ history.2 | get_time_long:history.3 }}
                            {% else %}
-                                {{ history.2 }}
+                                {{ history.2 | convert_time }}
                            {% endif %}</span>
                        </div>
                        <div class="zjjl_tf">费用：<span class="col_z">{{ history.4 }}元</span></div>
                    </div>
                    <div class="zjjl_h zjjl_h_hr">
                            <div class="zjjl_zj">
-                               <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"></div>
-                               {% if history.3 %}
-                                <span>还：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</span>
+                                {% if history.3 %}
+                                    <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="归还"></div>
+
+                                    <span>还：{{ history.3 | convert_time }}<br>西江千户苗寨 西服务区售票大厅</span>
                                {% endif %}
                            </div>
                             <div class="zjjl_zj">
-                                <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="归还"></div>
-                                    <span>租：{{ history.2 }}<br>{{ history.site }}</span>
+                                <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
+                                    <span>租：{{ history.2 | convert_time }}<br>{{ history.site }}</span>
                             </div>
                    </div>
                  </div>
