--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -27,14 +27,14 @@
                        </div>
                    </div>
                    <div class="zjjl_h">
-                       <div class="zjjl_tf">用时：<span class="col_z">
+                       <div class="zjjl_tf">用时(分)：<span class="col_z">
                            {% if history.3 %}
                                 {{ history.2 | get_time_long:history.3 }}
                            {% else %}
                                 {{ history.2 | get_time_long }}
                            {% endif %}</span>
                        </div>
-                       <div class="zjjl_tf">费用：<span class="col_z">{{ history.4 }}元</span></div>
+                       <div class="zjjl_tf">费用(元)：<span class="col_z">{{ history.4 }}</span></div>
                    </div>
                    <div class="zjjl_h zjjl_h_hr">
                         {% if history.3 %}
