--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -44,10 +44,10 @@
 
                                     <span>还：{{ history.3 | convert_time }}<br>
                                         {% for cabinet in cabinets %}
-                                            {% ifequal cabinet.id history.7 %}
+                                            {% ifequal cabinet.0 history.7 %}
                                                 {% for spot in spots %}
-                                                    {% ifequal spot.id cabinet.spot_id %}
-                                                        {{ spot.name }}
+                                                    {% ifequal spot.0 cabinet.2 %}
+                                                        {{ spot.1 }}
                                                     {% endifequal %}
                                                 {% endfor %}
                                             {% endifequal %}
@@ -60,10 +60,10 @@
                             <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
                                 <span>租：{{ history.2 | convert_time }}<br>
                                     {% for cabinet in cabinets %}
-                                        {% ifequal cabinet.id history.7 %}
+                                        {% ifequal cabinet.0 history.7 %}
                                             {% for spot in spots %}
-                                                {% ifequal spot.id cabinet.spot_id %}
-                                                    {{ spot.name }}
+                                                {% ifequal spot.0 cabinet.2 %}
+                                                    {{ spot.1 }}
                                                 {% endifequal %}
                                             {% endfor %}
                                         {% endifequal %}
