--- a/templates/weixin/base.html
+++ b/templates/weixin/base.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb" dir="ltr" charset="GB2312">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="utf-8" dir="ltr">
 {% load static %}
 <html>
     <head>
