--- a/templates/weixin/base.html
+++ b/templates/weixin/base.html
@@ -1,14 +1,14 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="utf-8" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="utf-8" dir="ltr" >
 {% load static %}
 <html>
     <head>
-        <meta charset="GB2312">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <meta name="description" content="ÇÑ×Ó×ÔÅÄ ×ÔÅÄÉñÆ÷ ÊÇÂÃÓÎ¼Ó¹²ÏíµÄÆ½Ì¨£¬Í¨¹ý¹²Ïí×ÔÅÄ¸ËÎªÆðµã£¬ÊµÏÖÇá×°ÂÃÐÐ£¬ËæÊ±×ÔÅÄ¡£ÇáÅÄ¿Æ¼¼ÊÇ½â¾öÔÚ¾°ÇøÓÎÍæÊ±ÏëÒª×ÔÅÄ£¬È´Ã»ÓÐ»òÍü´ø×ÔÅÄ¸ËµÄÓÃ»§£¬¶øÍ¨¹ý×â½è¹²ÏíµÄ·½Ê½±ã½ÝµÄÄÃµ½×ÔÅÄ¸Ë£¬Í¨¹ý¹«ÖÚºÅÕÒµ½¾°ÇøÄÚÈÎÒâ×î½ü»ú¹ñµã¿É¹é»¹£¬²¢½â¾öÊÖ»úÓ¦¼±³äµçµÄÎÊÌâ¡£">
-        <meta name="keywords" content="ÇÑ×Ó×ÔÅÄ ÇáÅÄ¿Æ¼¼ ×ÔÅÄ¸Ë ¹²Ïí×ÔÅÄ¸Ë ¹²Ïí¾­¼Ã ¹²Ïíµ¥³µ£¯¹²Ïí³äµç±¦£¯¹²ÏíÓêÉ¡£¯¹²ÏíÀºÇò£¯¹²Ïí°´Ä¦ÒÎ£¯¹²ÏíÖ±Éý»ú ×ÔÅÄ ÂÃÓÎ×ÔÅÄ ¹²Ïí×âÁÞ ¹²Ïí·ç¿Ú">
+        <meta name="description" content="èŒ„å­è‡ªæ‹ è‡ªæ‹ç¥žå™¨ æ˜¯æ—…æ¸¸åŠ å…±äº«çš„å¹³å°ï¼Œé€šè¿‡å…±äº«è‡ªæ‹æ†ä¸ºèµ·ç‚¹ï¼Œå®žçŽ°è½»è£…æ—…è¡Œï¼Œéšæ—¶è‡ªæ‹ã€‚è½»æ‹ç§‘æŠ€æ˜¯è§£å†³åœ¨æ™¯åŒºæ¸¸çŽ©æ—¶æƒ³è¦è‡ªæ‹ï¼Œå´æ²¡æœ‰æˆ–å¿˜å¸¦è‡ªæ‹æ†çš„ç”¨æˆ·ï¼Œè€Œé€šè¿‡ç§Ÿå€Ÿå…±äº«çš„æ–¹å¼ä¾¿æ·çš„æ‹¿åˆ°è‡ªæ‹æ†ï¼Œé€šè¿‡å…¬ä¼—å·æ‰¾åˆ°æ™¯åŒºå†…ä»»æ„æœ€è¿‘æœºæŸœç‚¹å¯å½’è¿˜ï¼Œå¹¶è§£å†³æ‰‹æœºåº”æ€¥å……ç”µçš„é—®é¢˜ã€‚">
+        <meta name="keywords" content="èŒ„å­è‡ªæ‹ è½»æ‹ç§‘æŠ€ è‡ªæ‹æ† å…±äº«è‡ªæ‹æ† å…±äº«ç»æµŽ å…±äº«å•è½¦ï¼å…±äº«å……ç”µå®ï¼å…±äº«é›¨ä¼žï¼å…±äº«ç¯®çƒï¼å…±äº«æŒ‰æ‘©æ¤…ï¼å…±äº«ç›´å‡æœº è‡ªæ‹ æ—…æ¸¸è‡ªæ‹ å…±äº«ç§Ÿèµ å…±äº«é£Žå£">
         <link href="{% static '/css/weixin.css' %}" rel="stylesheet" type="text/css"/>
         {% block head %}
         {% endblock %}
