--- a/templates/weixin/return.html
+++ b/templates/weixin/return.html
@@ -76,10 +76,19 @@
                 }else
                 {
                     wx.scanQRCode({
-                        needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+                        needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
                         scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
                         success: function (res) {
                             var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                            var cabinet_code = '12-1213-21';
+                            $.ajax({
+                                type:"post",
+                                url:"/weixin/get_capacity/",//自己填写请求地址
+                                data:{cabinet_code:cabinet_code},
+                                success:function(result){
+                                    location.href = '/weixin/output_tip/' + result + '/' + cabinet_code + '/'
+                                }
+                            });
                         }
                     });
                 }
