--- a/templates/weixin/return.html
+++ b/templates/weixin/return.html
@@ -86,7 +86,7 @@
                                 url:"/weixin/get_capacity/",//自己填写请求地址
                                 data:{cabinet_code:cabinet_code},
                                 success:function(result){
-                                    location.href = '/weixin/output_tip/' + result + '/' + cabinet_code + '/'
+                                    location.href = '/weixin/return_tip/' + result + '/' + cabinet_code + '/'
                                 }
                             });
                         }
