add return pay function

--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -71,10 +71,12 @@
                 var is_deposit = $('#deposit').val();
                 var openid = $('#openid').val();
                 var is_lend = $('#lend').val();
+
                 if (is_deposit == 'False')
                 {
                     alert('还没有充值，请先去充值吧？', 'danger');
-                    location.href = '/weixin/pay/?openid='+ openid;
+                    location.href = '/weixin/pay/?openid='+ openid + '&is_deposit=' + is_deposit +
+                        '&redrect_url=/weixin/lend/&title=押金支付&notify_url=/weixin/payback/' ;
                 }else
                 {
                     if(is_lend == 'True')
