add return pay function

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -25,6 +25,10 @@
                            {% ifequal history.5 1 %}
                                <span>已归还,</span><span><a href="/weixin/return_pay/">去支付</a></span>
                            {% endifequal %}
+                           {% ifequal history.5 2 %}
+                               <span>已完成</span>
+                           {% endifequal %}
+
                        </div>
                    </div>
                    <div class="zjjl_h">
