微信公众号建设

--- a/templates/weixin/lend_success.html
+++ b/templates/weixin/lend_success.html
@@ -9,7 +9,7 @@
 {% block content %}
 
     <div class="ts_cont">
-        <img class="zgjs_img" src="{% static '/images/weixin/zgjs.gif' %}" alt="租杆成功">
+        <img class="zgjs_img" src="{% static '/images/weixin/zgcg.gif' %}" alt="租杆成功">
     </div>
 
     <div class="nr_con">
