--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -386,4 +386,5 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_right_l{float: left;font-size: 14px;line-height: 22px;padding-bottom: 20px;color: #333333;}
 .txjd_time{color: #999999;}
 
+.cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333}
 
