--- a/templates/weixin/lend_success.html
+++ b/templates/weixin/lend_success.html
@@ -12,8 +12,9 @@
         <img class="zgjs_img" src="{% static '/images/weixin/zgcg.gif' %}" alt="租杆成功">
     </div>
 
-    <div class="nr_con">
-        <span>享受快乐记录精彩去吧，记得分享照片哦</span>
+    <div class="cgsm">
+        <span class="col_z">租杆成功</span><br>
+        享受快乐记录精彩去吧，记得分享照片哦
     </div>
 
 {% endblock %}
