微信公众号建设

--- a/templates/weixin/lend_success.html
+++ b/templates/weixin/lend_success.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="cgsm">
-        <span class="col_z">租杆成功</span><br>
+        <span class="col_z2">租杆成功</span><br>
         享受快乐记录精彩去吧，记得分享照片哦
     </div>
 
