--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -37,6 +37,9 @@
                        </div>
                        <div class="zjjl_tf">费用(元)：<span class="col_z">{{ history.4 }}</span></div>
                    </div>
+                    <div class="zjjl_h">
+                       <div class="zjjl_dd">计费规则：1小时内免费，之后¥1/小时，每天¥8封顶</div>
+                    </div>
                    <div class="zjjl_h zjjl_h_hr">
                         {% if history.3 %}
                            <div class="zjjl_zj">
