--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -338,6 +338,7 @@ input.weui-btn_plain-default{
 .zjjl_h_hr{height: 110px;border-bottom: none;}
 .zjjl_dd{width: 80%;float:left;text-align: left;}
 .zjjl_zt{width: 20%;float: right;text-align: right;color: #333333;font-weight: bold;}
+.zjjl_gz{width: 100%;float:left;text-align: left;}
 .zjjl_tf{width: 40%;float: left;color: #333333;text-align: left;}
 .zjjl_zj{width: 100%;float:left;line-height: 24px;text-align: left;height: 60px;}
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
