微信公众号建设

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -38,7 +38,7 @@
                        <div class="zjjl_tf">费用(元)：<span class="col_z">{{ history.4 }}</span></div>
                    </div>
                     <div class="zjjl_h">
-                       <div class="zjjl_dd">计费规则：首1小时免费，之后¥1/小时，每天¥8封顶</div>
+                       <div class="zjjl_gz">计费规则：首1小时免费，之后¥1/小时，每天¥8封顶</div>
                     </div>
                    <div class="zjjl_h zjjl_h_hr">
                         {% if history.3 %}
