微信公众号建设

--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -11,7 +11,7 @@
                   <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="出杆提示">
             </div>
              <div class="nr_con">
-               <div class="sm_cont">
+               <div class="cgsm">
                 请注意机柜屏幕信息<br>自拍杆将从<span class="col_z">闪亮指示灯位置</span>吐出<br>请及时取走掏空
             </div>
 
