--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -391,3 +391,5 @@ h3{font-size: 14px;font-weight: bold;}
 
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;}
 
+.fyzf_time{width: 100%;text-align: center;font-size: 20px;color: #666666;line-height: 30px;}
+.fyzf_fee{width: 100%;text-align: center;font-size: 20px;color:#cc0099;line-height: 30px;font-weight: 400;}
