微信公众号建设

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -8,10 +8,10 @@
 {% block content %}
         {% ifequal has_capacity 'True' %}
             <div class="ts_cont ts_cont_all">
-                  <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="还杆提示">
+                  <img class="zgjs_img" src="{% static '/images/weixin/hgts.gif' %}" alt="还杆提示">
             </div>
              <div class="nr_con">
-               <div class="sm_cont">
+               <div class="cgsm">
                 请注意机柜状态<br><span class="col_z">机柜的入口会打开， 请正确放入自拍杆</span>
             </div>
 
