add return pay function

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -17,7 +17,7 @@
 
             </div>
 
-            <div class="cz_tip">
+            <div class="cz_tip" style="display:none;">
                 <span>操作提示</span><br>
                 <span>1.可能自拍杆头尾放反，请将有手扣端放在上面；</span>
                 <span>2.可能自拍杆没收纳好，请将拉出的架子／线等收好，不露出自拍杆手把外；</span>
