--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -54,7 +54,7 @@
                         }
                         else if(msg=='return_alert')
                         {
-                            $('div').hide();
+{#                            $('div').hide();#}
                             $('#cz_tip').show();
                         }
                     });
