add return pay function

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -54,8 +54,8 @@
                         }
                         else if(msg=='return_alert')
                         {
-{#                            $('div').hide();#}
-                            $('#cz_tip').show();
+                            $('div').hide();
+                            $('.cz_tip').show();
                         }
                     });
                 }
@@ -107,7 +107,7 @@
                 function hide_tip()
                 {
                     $('div').show();
-                    $('#cz_tip').hide();
+                    $('.cz_tip').hide();
                 }
 
             </script>
