--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -393,3 +393,14 @@ h3{font-size: 14px;font-weight: bold;}
 
 .fyzf_time{width: 100%;text-align: center;font-size: 20px;color: #666666;line-height: 30px;}
 .fyzf_fee{width: 100%;text-align: center;font-size: 20px;color:#cc0099;line-height: 30px;font-weight: 400;}
+
+.cz_tip{width:100%;
+    height:100%;
+    background:rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99;}
+.cz_tip_cont{width: 90%;margin: 50px 0 auto;background-color: white; text-align: left;font-weight: 14px;color: #666666;position: fixed;z-index: 999;}
+.cz_tip_til{width: 100%;text-align: center;height: 20px;margin: 30px 30px auto;color: #cc0099;font-weight: 400;}
+.cz_tip_bot{width: 30%;}
