微信公众号建设

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -18,11 +18,13 @@
             </div>
 
             <div class="cz_tip" style="display:none;">
-                <span>操作提示</span><br>
-                <span>1.可能自拍杆头尾放反，请将有手扣端放在上面；</span>
-                <span>2.可能自拍杆没收纳好，请将拉出的架子／线等收好，不露出自拍杆手把外；</span>
-                <span>3.可能自拍杆没放到位，请取出后，再次放入试试。</span>
-                <input value="我知道了" id="know" onclick="hide_tip()">
+                <div class="cz_tip_cont">
+                    <div class="cz_tip_til"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/chongfang.png' %}" alt="还杆失败提示"></div>操作提示</div>
+                    1.可能自拍杆头尾放反，请将有手扣端放在上面；<br>
+                    2.可能自拍杆没收纳好，请将拉出的架子／线等收好，不露出自拍杆手把外；<br>
+                    3.可能自拍杆没放到位，请取出后，再次放入试试。<br>
+                    <a href="#" id="know" class="weui-btn weui-btn_primary page__bd_spacing cz_tip_bot">知道了</a>
+                </div>
             </div>
             <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
             <script src="{% static 'js/jquery-min.js' %}"></script>
