--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -23,7 +23,7 @@
                     1.可能自拍杆头尾放反，请将有手扣端放在上面；<br>
                     2.可能自拍杆没收纳好，请将拉出的架子／线等收好，不露出自拍杆手把外；<br>
                     3.可能自拍杆没放到位，请取出后，再次放入试试。<br>
-                    <a href="#" id="know" class="weui-btn weui-btn_primary page__bd_spacing cz_tip_bot">知道了</a>
+                    <a href="#" id="know" class="weui-btn weui-btn_primary page__bd_spacing cz_tip_bot" onclick="hide_tip()">知道了</a>
                 </div>
             </div>
             <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
