--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -19,7 +19,10 @@
 
             <div class="cz_tip" style="display:none;">
                 <div class="cz_tip_cont">
-                    <div class="cz_tip_til"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/chongfang.png' %}" alt="还杆失败提示"></div>操作提示</div>
+                    <div class="cz_tip_til">
+                        <div class="zjjl_icon">
+                            <img class="zjjl_icon_img" src="{% static '/images/weixin/chongfang.png' %}" alt="还杆失败提示">
+                        </div>操作提示</div>
                     1.可能自拍杆头尾放反，请将有手扣端放在上面；<br>
                     2.可能自拍杆没收纳好，请将拉出的架子／线等收好，不露出自拍杆手把外；<br>
                     3.可能自拍杆没放到位，请取出后，再次放入试试。<br>
