--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -59,7 +59,7 @@
                         }
                         else if(msg=='return_alert')
                         {
-                            $('div').hide();
+{#                            $('div').hide();#}
                             $('.cz_tip').show();
                         }
                     });
@@ -111,7 +111,7 @@
 
                 function hide_tip()
                 {
-                    $('div').show();
+{#                    $('div').show();#}
                     $('.cz_tip').hide();
                 }
 
