--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -396,7 +396,7 @@ h3{font-size: 14px;font-weight: bold;}
 
 .cz_tip{width:100%;
     height:100%;
-    /*background:rgba(0, 0, 0, 0.5);*/
+    background:rgba(0, 0, 0, 0.5);
     position: fixed;
     left: 0;
     top: 0;
