--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -28,6 +28,9 @@
                            {% ifequal history.5 2 %}
                                <span>已完成</span>
                            {% endifequal %}
+                           {% ifequal history.5 3 %}
+                               <a href="/weixin/buy_tip/{{ history.0 }}/" onclick="show_buy()">已购买</a>
+                           {% endifequal %}
 
                        </div>
                    </div>
