--- a/templates/weixin/buy_tip.html
+++ b/templates/weixin/buy_tip.html
@@ -14,8 +14,8 @@
         <span>因保留超过5天未归还，系统自动转为购买</span>
     </div>
     <div>
-        <span>取杆情况：{{ lend_date }} 于：{{ lend_site }}</span>
-        <span>了解自拍杆服务协议，查看<a href="">茄子自拍租借协议</a></span>
+        <span>取杆情况：{{ lend_date }} 于：{{ lend_site }}</span><br>
+        <span>了解自拍杆服务协议，查看<a href="/weixin/contract/">茄子自拍租借协议</a></span>
     </div>
 
 
