--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -75,7 +75,7 @@
                 if (is_deposit == 'False')
                 {
                     alert('还没有充值，请先去充值吧？', 'danger');
-                    location.href = '/weixin/pay/' ;
+                    location.href = '/weixin/pay/?openid='+ openid ;
                 }else
                 {
                     if(is_lend == 'True')
