--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -344,8 +344,9 @@ input.weui-btn_plain-default{
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
 .zjjl_icon_img{width: 18px;height: auto;border: none;}
 .fyzf_icon{width: 20px;height:30px;float: left;margin:5px 5px 0 0;}
-.zt_jxz{color:#179B16;}
-.zt_zgm{color:#CE3C39;}
+.zt_jxz{color:#179B16;font-weight: bold;}
+.zt_zgm{color:#CE3C39;font-weight: bold;}
+.zt_ywc{color:#333333;font-weight: bold;}
 .wk_ts{width: 100%;height: 100px;line-height: 28px;text-align: center;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;background-color: white;padding-top: 20px;padding-bottom: 20px;}
 .wk_ts a{text-decoration: none;color: #cc0099;}
 .gr_cont{background-color:#f8f8f8;height: 100%;}
