微信公众号建设

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -91,7 +91,7 @@
 
             {% endfor %}
         {% else %}
-            <div class="wk_ts">您竟然还没体验自拍神器，还等什么～<br><a href="/weixin/lend/">借自拍杆</a></div>
+            <div class="wk_ts">您竟然还没体验自拍神器，还等什么～<br><a href="/weixin/lend/">立马借一根</a></div>
         {% endif %}
 
     </div>
