--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -391,6 +391,7 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_time{color: #999999;}
 
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;}
+.cgsm a{text-decoration: none;}
 
 .fyzf_time{width: 100%;text-align: center;font-size: 20px;color: #666666;line-height: 30px;}
 .fyzf_fee{width: 100%;text-align: center;font-size: 20px;color:#cc0099;line-height: 30px;font-weight: 400;}
