--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -122,8 +122,8 @@
                <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="该机柜已没有空间">
             </div>
             <div class="nr_con">
-                <a href="/weixin/nearby/" id="nearby" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可还机柜</a>
-                <div class="sm_cont">
+                <a href="/weixin/nearby/" id="nearby" class="weui-btn weui-btn_default  page__bd_spacing">查看附近可还机柜</a>
+                <div class="cgsm">
                 抱歉，此处自拍杆已集齐，此机柜已满仓<span class="col_z">存满</span>
                 </div>
 
