--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -343,7 +343,7 @@ input.weui-btn_plain-default{
 .zjjl_zj{width: 100%;float:left;line-height: 24px;text-align: left;height: 60px;}
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
 .zjjl_icon_img{width: 18px;height: auto;border: none;}
-.fyzf_icon{width: 20px;height:30px;float: left;margin:5px 5px 0 0;}
+.fyzf_icon{width: 20px;height:30px;margin:5px 5px 0 0;}
 .zt_jxz{color:#179B16;font-weight: bold;}
 .zt_zgm{color:#CE3C39;font-weight: bold;}
 .zt_ywc{color:#333333;font-weight: bold;}
@@ -391,7 +391,7 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_time{color: #999999;}
 
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;}
-.cgsm a{text-decoration: none;}
+.cgsm a{text-decoration: none}
 
 .fyzf_time{width: 100%;text-align: center;font-size: 20px;color: #666666;line-height: 30px;}
 .fyzf_fee{width: 100%;text-align: center;font-size: 20px;color:#cc0099;line-height: 30px;font-weight: 400;}
