--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -321,7 +321,7 @@ input.weui-btn_plain-default{
 }
 
 .ts_cont{width: 100%;height: auto;float: left;text-align: center;margin: 50px auto;}
-.ts_cont_all{background-color: #f8f8f8}
+.ts_cont_all{background-color: #f8f8f8; margin-bottom: 30px;}
 .zgjs_img{width: 45%;height: auto;}
 .nr_con{padding: 0 15px;font-weight: 200;}
 .nr_con_all{padding: 0;background-color:#f8f8f8;height: 100%;}
@@ -390,11 +390,11 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_right_l{float: left;font-size: 14px;line-height: 22px;padding-bottom: 20px;color: #333333;}
 .txjd_time{color: #999999;}
 
-.cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;}
+.cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;font-size: 14px;}
 .cgsm a{text-decoration: none}
 
-.fyzf_time{width: 100%;text-align: center;font-size: 20px;color: #666666;line-height: 30px;}
-.fyzf_fee{width: 100%;text-align: center;font-size: 20px;color:#cc0099;line-height: 30px;font-weight: 400;}
+.fyzf_time{width: 100%;text-align: center;font-size: 24px;color: #666666;line-height: 30px;margin-bottom: 30px;}
+.fyzf_fee{width: 100%;text-align: center;font-size: 24px;color:#cc0099;line-height: 30px;font-weight: 400;margin-bottom: 30px;}
 
 .cz_tip{width:100%;
     height:100%;
