--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -395,6 +395,7 @@ h3{font-size: 14px;font-weight: bold;}
 
 .fyzf_time{width: 100%;text-align: center;font-size: 24px;color: #666666;line-height: 30px;margin-bottom: 30px;}
 .fyzf_fee{width: 100%;text-align: center;font-size: 24px;color:#cc0099;line-height: 30px;font-weight: 400;margin-bottom: 30px;}
+.fyzf_dd{width: 100%;float:left;text-align: left;line-height: 30px;font-size: 14px;margin: 30px 0 30px 0}
 
 .cz_tip{width:100%;
     height:100%;
